# openclaw-starter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  bootstrap.sh  setup.sh  sync-to-template.sh
.githooks/: commit-msg  post-commit  project-gates.sh
.github/workflows/: ci.yml  commit-format.yml  pre-commit-verify.yml  secret-scan.yml
.task-lock/: bats-overhaul.started  security-audit-fixes.started
config/: gemini-settings.template.json  openclaw.template.json5
config/env/: .env.example  1password.env.example
docs/: ARCHITECTURE.md  CRON-FLEET.md  FAQ.md  GATES.md  SETUP-GUIDE.md  SKILLS-GUIDE.md  TROUBLESHOOTING.md  UPGRADE.md
docs/guides/: 1password.md  README.md  browser.md  claude-code.md  cloudflare.md  codex.md  discord.md  github.md  mcp-bridge.md  oracle.md  prerequisites.md  tailscale.md  web-search.md
scripts/: fix-sqlite3-arch.sh  openclaw-cached-wrapper.sh  release-dashboard.sh  release.sh  update-changelog.sh
scripts/dotfiles/: .editorconfig  nanorc  (+1 more)
specs/: oracle-audit-9fixes.md
tasks/: SPEC-TEMPLATE.md  bats-overhaul.md  gates-portable.md  gateway-self-kill-protection.md  security-audit-fixes.md  v1.3.1-cleanup.md
tests/: gates-portable.bats  gateway-safety.bats  guardian-zombie.bats  hooks-behavioral.bats  openclaw-template.bats  pre-push.bats  project-gates.bats  release-dashboard.bats  setup.bats
workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  IDENTITY.md.example  MEMORY.md  SOUL.md  SOUL.md.example  TOOLS.md  TOOLS.md.example  USER.md  USER.md.example
workspace/mcp-bridge/: main.py  pyproject.toml  server.py
(+158 files in other folders)
